[HTMLs] Agregado de Animasiones

--- a/index.html
+++ b/index.html
@@ -8,12 +8,10 @@
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Acme&family=Oswald&display=swap" rel="stylesheet">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/4.1.1/animate.min.css">
     <title>Counseling Online</title>
-    <!-- <link rel="stylesheet" href="./css/style.css"> -->
-    
     <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.15.4/css/all.css" integrity="sha384-DyZ88mC6Up2uqS4h/KRgHuoeGwBcD4Ng9SiP4dIRy0EXTlnuz47vAwmeGwVChigm" crossorigin="anonymous">
     <link rel="stylesheet" href="css/style.css">
-
 </head>
 <body>
     <div class="grid-container">
@@ -28,23 +26,23 @@
                         <li><a href="pages/contacto.html">Contacto</a></li>
                     </ul>
                 </div>
-                <div class="Header__Logo">
+                <div class="Header__Logo animate__animated animate__fadeInLeft animate__delay-1s animate__slower">
                     <a href="index.html"><img src="images/logo.png" height="70" alt="Logo de Counselingnline"></a>
                 </div>
             </nav>
         </header> 
         <main class="main_container">
             <h1 class="titulo">Lorem ipsum dolor sit amet consectetur adipisicing elit. Omnis except</h1>
-            <div class="descripcion Principal__Descripcion">
+            <div class="descripcion Principal__Descripcion animate__animated animate__fadeInLeftBig animate__delay-1s animate__slower">
                 <p class="Texto__Descriptivo">Lorem ipsum dolor sit, amet consectetur adipisicing elit. Veritatis laborum praesentium nesciunt explicabo quas. Numquam modi distinctio nostrum nemo officiis incidunt totam alias quasi deleniti quibusdam! Saepe possimus officia quibusdam.</p>
                 <p class="Texto__Descriptivo">Deserunt hic odio quis vero sit iure itaque nemo mollitia repudiandae explicabo provident commodi debitis unde porro accusantium sed veniam, ab officia dolorem. Cupiditate aperiam, eius sed possimus earum aliquid?</p>
             </div>
-            <div class="video Principal__Video">
+            <div class="video Principal__Video animate__animated animate__fadeInRightBig animate__delay-1s animate__slower">
                 <iframe src="https://www.youtube.com/embed/8qGBWOL0rdo" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
             </div>
         </main>
         <footer class="pie">
-            <div class="Footer__Logo">
+            <div class="Footer__Logo animate__animated animate__fadeInLeft animate__delay-2s animate__slower animate__infinite">
                 <a href="index.html"><img src="images/logo.png" height="50" alt="Logo de Counseling Online"></a>
             </div>
             <div class="Footer__RedesSociales">
