--- a/pages/servicios.html
+++ b/pages/servicios.html
@@ -8,9 +8,10 @@
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Acme&family=Oswald&display=swap" rel="stylesheet">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/4.1.1/animate.min.css">
+    <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.15.4/css/all.css" integrity="sha384-DyZ88mC6Up2uqS4h/KRgHuoeGwBcD4Ng9SiP4dIRy0EXTlnuz47vAwmeGwVChigm" crossorigin="anonymous">
     <title>Counselingnline | Servicios</title>
     <link rel="stylesheet" href="../css/style.css">
-    <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.15.4/css/all.css" integrity="sha384-DyZ88mC6Up2uqS4h/KRgHuoeGwBcD4Ng9SiP4dIRy0EXTlnuz47vAwmeGwVChigm" crossorigin="anonymous">
 </head>
 <body>
     <header class="Header">
@@ -24,7 +25,7 @@
                     <li><a href="./contacto.html">Contacto</a></li>
                 </ul>
             </div>
-            <div class="Header__Logo">
+            <div class="Header__Logo animate__animated animate__fadeInLeft animate__delay-2s animate__slower">
                 <a href="../index.html"><img src="../images/logo.png" height="70" alt="Logo de Counselingnline"></a>
             </div>
         </nav>
@@ -54,7 +55,7 @@
     </section>
 
     <footer class="pie">
-        <div class="Footer__Logo">
+        <div class="Footer__Logo animate__animated animate__fadeInLeft animate__delay-2s animate__slower animate__infinite">
             <a href="../index.html"><img src="../images/logo.png" height="50" alt="Logo de Counseling Online"></a>
         </div>
         <div class="Footer__RedesSociales">
